# libpstiff

./: CMakeLists.txt  PsTiffResource.cpp  README  pstiff.h  pstiff_image_resource.cpp  pstiff_image_resource_id.cpp  pstiff_tool.cpp
pstiff/: Resource.h  ResourceId.h  ResourceList.h  Types.h
pstiff/io/: hex_dump.h  to_hex.h
pstiff/tools/: strings.h
